--- a/ReceiptLogic/ReceiptLogic.csproj
+++ b/ReceiptLogic/ReceiptLogic.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ReceiptDataLayer\ReceiptDataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
