--- a/ReceiptDataLayer/ReceiptDataLayer.csproj
+++ b/ReceiptDataLayer/ReceiptDataLayer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ReceiptCommon\ReceiptCommon.csproj" />
+  </ItemGroup>
+
 </Project>
